Перенесена логика из useEffect в global state

--- a/src/index.scss
+++ b/src/index.scss
@@ -4,6 +4,18 @@
 
 }
 
-.char {
-    
+.key_success {
+    background-color: blue;
+}
+
+.key_active {
+    background-color: green;
+}
+
+.key_failed {
+    background-color: red;
+}
+
+.key_default {
+    background-color: wheat;
 }
